# LangGraph-Financial-Swarm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  main.py  mypy.ini  push_log.txt  push_log_utf8.txt  pyproject.toml  requirements.txt  ruff.toml  test_openai.py
.github/workflows/: ci.yml  test.yml
data/raw/: sample_financials.md
docs/: ADR-001-LangGraph.md
docs/paper/: LangGraph_Financial_Swarm_Paper.md  outline.md
scripts/: check_env.py
src/: rag_adapter.py
src/agents/: chart_gen.py  researcher.py  supervisor.py
src/core/: config.py  exceptions.py  prompts.py
src/data/: ingest.py
src/experiments/: evaluate_metrics.py  run_comparison.py
src/langgraph_financial_swarm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/prompts/: quant.txt  researcher.txt  supervisor.txt
src/tools/: plot_tool.py  rag_tool.py
src/utils/: observability.py  parsing.py  validation.py
tests/: test_integration.py  test_robustness.py
